Attempt to prevent the app from hiding behind browser buttons on mobile

--- a/src/components/input-area.css
+++ b/src/components/input-area.css
@@ -14,8 +14,3 @@
   background-color: rgba(255, 255, 255, 0.1);
   box-shadow: 0 -2px 4px rgba(255, 255, 255, 0..05);
 }
-
-.isSafariOniOS {
-  /* Safari on iOS obscures the bottom 80px or so of the app */
-  margin-bottom: 77px;
-}
