--- a/src/components/settings-menu.css
+++ b/src/components/settings-menu.css
@@ -1,5 +1,5 @@
 .settings-menu {
-  height: 100vh;
+  height: 100%;
   width: 100vw;
 
   position: absolute;
